# napari-fits

./: LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
napari_fits/: _reader.py  _widget.py  napari.yaml
tests/: conftest.py  test_reader.py  test_widget.py
