[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "napari-fits"
version = "0.0.1"
description = "A plugin to read FITS images within napari."
license="BSD-3-Clause"
authors = ["Philipp Plewa <pmplewa@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/pmplewa/napari-fits"
classifiers = [
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.poetry.dependencies]
python = ">=3.10"
dask = {version = ">=2023", extras = ["array"]}
astropy = ">=5.3"
magicgui = ">=0.7.3"
napari = ">=0.4.18"

[tool.poetry.group.dev.dependencies]
black = "23.9.*"
invoke = "2.2.*"
isort = "5.12.*"
mypy = "1.6.*"
pylint = "3.0.*"
pytest = "7.4.*"
pytest-cov = "4.1.*"
pytest-qt = "4.2.*"

[tool.poetry.plugins."napari.manifest"]
napari-fits = "napari_fits:napari.yaml"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["venv"]

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "invoke.*",
    "napari.*",
]
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = """
missing-docstring,
"""
